<resources>
    <string name="app_name">tbike</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User Id</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">SIGN IN</string>
    <string name="register_signup">SIGN UP</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register_text">Not Registered Yet?</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="tbike_t">t</string>
    <string name="tbike_bike">-bike</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_home">Home</string>
    <string name="action_rides">Rides</string>
    <string name="action_battery">Battery</string>
    <string name="action_accessories">Accessories</string>
    <string name="action_profile">Profile</string>
    <string name="action_track">Track T-Bike</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share</string>
    <string name="action_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="action_sign_up">Sign Up</string>
    <string name="content_description">Content Description</string>
    <string name="already_registered">Already Registered? Sign IN</string>
</resources>
