<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">


        <RelativeLayout
            android:id="@+id/rl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="56dp"
            android:paddingTop="56dp">

            <TextView
                android:id="@+id/tv_heading_t"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tbike_t"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/heading_eelarge"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv_heading_t"
                android:text="@string/tbike_bike"
                android:textSize="@dimen/heading_eelarge"
               />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_title"
            android:layout_marginTop="16dp">

            <EditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/temp_icon_profile"
                android:drawablePadding="@dimen/login_et_left_padding"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/edtxt_padding"
               />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_login_email"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:drawableLeft="@drawable/temp_icon_profile"
                android:drawablePadding="@dimen/login_et_left_padding"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="@dimen/edtxt_padding"
                android:paddingRight="60dp"
               />

            <Button
                android:id="@+id/bt_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/et_login_email"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/forgot_password"
                android:textSize="@dimen/heading_vsmall"
               />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_login_password"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:background="@drawable/rounder_corner_bt"
                android:gravity="center"
                android:inputType="text"
                android:text="@string/action_sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/heading_vsmall"
                />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginTop="@dimen/activity_margin"
            android:gravity="center"
            android:text="@string/register_text"
            android:textSize="@dimen/heading_medium"
           />

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/activity_margin"
            android:layout_marginLeft="@dimen/dimen5dp"
            android:layout_marginTop="@dimen/activity_margin"
            android:layout_toRightOf="@+id/text_signup"
            android:text="@string/register_signup"
            android:textSize="@dimen/heading_medium"
             />

    </RelativeLayout>

</ScrollView>
